--- a/estilos.css
+++ b/estilos.css
@@ -26,6 +26,10 @@ nav ul li a {
   font-weight: 900;
 }
 
+nav ul li a:visited {
+  color: black;
+}
+
 nav ul li a:hover {
   transition: 1.5s;
   color: white;
@@ -122,7 +126,13 @@ footer {
 }
 
 @media screen and (max-width: 400px) {
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
   nav {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
