--- a/estilos.css
+++ b/estilos.css
@@ -24,6 +24,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   font-weight: 900;
+  color: black;
 }
 
 nav ul li a:visited {
@@ -31,7 +32,7 @@ nav ul li a:visited {
 }
 
 nav ul li a:hover {
-  transition: 1.5s;
+  transition: 1s;
   color: white;
 }
 
@@ -136,6 +137,13 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  nav ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
   footer {
