--- a/CSS/estilos2.css
+++ b/CSS/estilos2.css
@@ -24,19 +24,20 @@ section h1 {
 }
 
 section article {
-  width: 250px;
+  display: flex;
+  align-items: center;
+  width: 90%;
+  margin-left: 10px;
+  margin-right: 10px;
   height: 200px;
-  text-align: center; /*
-    border: 1px solid black;*/
+  text-align: center;
   margin-bottom: 25px;
   padding: 5px;
   cursor: pointer;
-  transition: width 1.5s;
+  transition: box-shadow 1s;
 }
 
 section article:hover {
-  /*
-    width: 255px;*/
   opacity: 0.8;
   box-shadow: 2px 2px 2px 2px rgb(93, 93, 93);
 }
@@ -52,8 +53,7 @@ section article h3 {
 }
 
 aside {
-  width: 30%; /*
-    border-left: 1px solid black;*/
+  width: 30%;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -94,4 +94,36 @@ aside ul li:hover {
   background-color: rgb(243, 181, 170);
   color: darkgreen;
   font-size: xx-large;
+}
+
+@media screen and (max-width: 750px) {
+  section {
+    width: 90%;
+  }
+
+  article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  article .contenedor_article p {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  section {
+    width: 100%;
+  }
+
+  article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  article .contenedor_article p {
+    display: none;
+  }
 }
